--- a/mensaje4.html
+++ b/mensaje4.html
@@ -30,7 +30,7 @@
     </div>
     <div class="button">
         <button>
-            <a href="FLORES.html">Mostrar sorpresa</a>
+            <a href="sorpresa.html">Mostrar sorpresa</a>
         </button>
         
     </div>
